[package]
name = "sshbeam"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = "0.32"
thrussh-keys = "0.20"
thrussh-config = { path = "../../contrib/thrussh/thrussh-config" }

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

cli-clipboard = "0.2"

dirs-next = "2.0"

thiserror = "1.0"

dialoguer = "0.7"
